extract camera logic in /camera

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="video-container">
       <!-- Hidden video; feed is drawn into the canvas below -->
-      <video id="video" autoplay playsinline></video>
+      <video id="video-source" autoplay playsinline></video>
       <!-- Canvas covers the entire viewport -->
-      <canvas id="canvas-overlay"></canvas>
+      <canvas id="video-canvas"></canvas>
     </div>
 
     <div id="status-bar">
